--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,5 @@
-<!-- <div class="container mt-5">
+<div class="container mt-5">
   <ui-spinner-ui-spinner size="sm" color="primary"></ui-spinner-ui-spinner>
   <ui-spinner-ui-spinner size="lg" color="danger"></ui-spinner-ui-spinner>
   <ui-spinner-ui-spinner size="md" color="success"></ui-spinner-ui-spinner>
-</div> -->
-
-<div
-  class="container mt-5 justify-content-between border border-primary text-center"
-  (click)="parent()"
->
-  <div class="border border-secondary">Namaste</div>
-  <div class="border border-danger" (click)="child($event)">Child click</div>
-  <div class="border border-secondary">Inshallah</div>
 </div>
